# asnakedeck

./: .cruft.json  .flake8  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: test.yml
asnakedeck/: __init__.py  __main__.py  config.py  deck.py  hookspecs.py  plugin_manager.py  types.py
asnakedeck/displayers/: clock.py
asnakedeck/handlers/: clock.py  cycle.py  emoji.py  label.py  volume.py
asnakedeck/platform/: __init__.py  linux.py  win32.py
asnakedeck/platform/linux/: __init__.py  audio.py
asnakedeck/platform/win32/: __init__.py  audio.py
asnakedeck/simulation/: app.py
docs/: Makefile  conf.py
examples/: config-basic.yml
examples/displayer-plugin/: example_displayer_plugin.py  setup.cfg
scripts/: clean.sh  lint.sh  test.sh
