[tool.poetry]
name = "asnakedeck"
version = "0.0.1"
description = "AsyncIO StreamDeck controller for Linux"
authors = ["Ash Berlin-Taylor <ash_github@firemirror.com>"]
license = "MIT"
readme = "README.md"
exclude = ["examples/"]

[tool.poetry.dependencies]
python = "^3.10"
streamdeck = ">= 0.8.4"
attrs = "*"
pillow = "*"
asyncinotify = "^2.0.2"
pulsectl-asyncio = {version = "^0.2.0", optional = true, markers='sys_platform == "linux"'}
windows-audio-control = {version = "^0.1.0", optional = true, markers='sys_platform == "win32"'}
windows-fonts = {version = "^1.0.0a0", allow-prereleases = true, markers='sys_platform == "win32"'}
typer = "^0.7.0"
kivy = {version = "^2.2.0.dev0", allow-prereleases = true, source = "kivy"}
pyyaml = "^6.0"

[tool.poetry.extras]
audio = ["pulsectl-asyncio", "windows-audio-control"]

[tool.poetry.group.dev.dependencies]
safety = "^2.2"
black = "^22.12.0"
mypy = "^0.991"
ipython = "^7.7"
pytest = "^7.0"
pytest-deadfixtures = "^2.2.1"
types-pyyaml = "^6.0.12.2"
ruff = "^0.0.213"
coverage = "^7.0.4"


[[tool.poetry.source]]
name = "kivy"
url = "https://kivy.org/downloads/simple/"
default = false
secondary = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 160
skip-string-normalization = true

[tool.isort]
add_imports = ["from __future__ import annotations"]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = [ "asnakedeck", "tests" ]
line_length = 160
multi_line_output = 3

[tool.cruft]
skip = [
  "asnakedeck/__init__.py",
  "tests",
  "pyproject.toml",
  "poetry.lock",
  "README.md",
  "CHANGELOG.md",
  ".flake8",
  ".git",
]

[tool.poetry.plugins."asnakedeck.key_handler"]
"clock" = "asnakedeck.handlers.clock:Clock"
"label" = "asnakedeck.handlers.label:Label"
"emoji" = "asnakedeck.handlers.emoji:Emoji"
"cycle" = "asnakedeck.handlers.cycle:Cycle"
"volume" = "asnakedeck.handlers.volume:Volume"

[tool.ruff]
target-version = "py311"
line-length = 160

extend-select = ["RUF100"]
